fix: invitation page account spacing

--- a/styles/Static.module.scss
+++ b/styles/Static.module.scss
@@ -247,7 +247,7 @@
 
 .sentInvite {
   cursor: pointer;
-  margin-top: 2rem;
+  margin-top: 3rem;
   width: 100%;
   display: flex;
   align-items: center;
